--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@ limitations under the License.
 
     <groupId>eu.vitaliy</groupId>
     <artifactId>maven-clip-plugin</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.1</version>
     <packaging>maven-plugin</packaging>
 
     <name>maven-clip-plugin Maven Plugin</name>
